# Omega-Bank-Server

./: .gitignore  CMakeLists.txt  README.md  schema.sql  used_lit.txt
src/: AddCardDialog.cpp  AddCardDialog.h  AddClientDialog.cpp  AddClientDialog.h  AuthManager.cpp  AuthManager.h  DBManager.cpp  DBManager.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  TransferDialog.cpp  TransferDialog.h  main.cpp  pch.h
src/infrastructure/database/: BankSystem.h  UserAccount.cpp  UserAccount.h
src/infrastructure/logging/: Logger.h
